# multi_portal

./: README.md  package-lock.json
workspace/: README.md  pyproject.toml  test.html  test.md  test2.py  データベース設計.md  審査項目.md  設計書.md
workspace/data/: README.md
workspace/data/csv/: Columns.csv  Large_category.csv  Post_tags.csv  Posts.csv  Products.csv  Report_score.csv  Report_tags.csv  Reports.csv  Sales.csv  Sales_detail.csv  Small_category.csv  Tag.csv  Users.csv
workspace/data/script/: comments.txt  description.txt  gpt.py  make_data.py  module.py  name.txt  profile.txt  report_score.txt  tags.txt
workspace/workspace/: .env  app.py  app_products.py  functions.py  gpt.py  データベース設計.md
workspace/workspace/app/: app.py  gpt.py
workspace/workspace/frontend/: .env  index.html  package-lock.json  package.json
workspace/workspace/frontend/src/: README.md  main.tsx
workspace/workspace/frontend/src/pages/: App.tsx
workspace/workspace/frontend/src/pages/Header/: header.css  header.tsx
workspace/workspace/frontend/src/pages/Login/: login.css  login.tsx
workspace/workspace/frontend/src/pages/Product/: accordion.css  accordion.tsx  chatbot.css  chatbot.tsx  invoice.css  invoice.tsx  product.css  product.tsx  product_list.css  product_list.tsx
workspace/workspace/frontend/src/pages/Profile/: profile.css  profile.tsx
workspace/workspace/frontend/src/pages/Report/: post_report.css  post_report.tsx
